mule-user-guide/v/3.4/sap-endpoint-reference.adoc
=  SAP端点参考

*_Enterprise_*

[NOTE]
该端点需要单独的许可证。联系mailto：sales@mulesoft.com [MuleSoft]来评估或使用此端点。

== 背景

Mule ESB通过SAP认证的Java连接器支持SAP集成。该连接器利用SAP Java连接器（JCo）库，该库可使Mule应用程序执行以下操作：

* 通过tRFC和qRFC发送IDoc
* 通过tRFC和qRFC接收IDoc
* 将所有SAP对象（JCoFunction和IDocs）转换为XML
* 使用以下所有类型的远程函数调用（RFC）执行业务应用程序编程接口（BAPI）函数：
**  sRFC（同步RFC）
**  tRFC（交易RFC）
**  qRFC（队列RFC）
* 充当JCo服务器，通过以下协议被称为BAPI：
**  SRFC
**  tRFC的
**  qRFC
+
image:sap-transport-image-01-1.png[树液传输图像-01-1]

== 先决条件

该端点需要以下SAP库：

*  Java连接器（JCo）库（与平台相关）
*  IDoc库

请注意，JCo库依赖于您的硬件平台和操作系统，因此您需要为运行Mule Studio的本地驱动器下载正确的版本。

两个库都需要三个文件：

* 多平台Java库：
**  sapjco3.jar
**  sapidoc3.jar

*  JCo平台特定的本机库之一：
**  sapjco3.dll（Windows）
**  libsapjco3.jnilib（Mac OS X）
**  libsapjco3.so（Linux）

[WARNING]
如果您部署到与用于开发的平台不同的平台，则*must*在生成zip文件之前更改本机库。

下载必要的 http://service.sap.com/connectors[SAP库]。要执行此下载，您必须具有SAP用户标识。

[NOTE]
为了使SAP能够与Mule通信，您需要执行额外的SAP配置。 SAP配置有利于许多选项，这些选项应由SAP系统管理员设置。 MuleSoft即将提供简单的示例配置。

== 启用您的Studio Project for SAP

如果系统中不存在本地SAP库，则Mule仅将SAP Endpoint用作任何其他Java库;在`classpath`项目中引用它，Studio在生成Mule应用程序zip文件时会自动包含这些库。

ESB服务器在`Java Native Library Path`环境变量中包含应用程序的`lib`目录。

[NOTE]
如果您使用的是Mule 3.2.1或更低版本，则必须在托管包含您的SAP端点的Mule应用程序的服务器上安装本机库。另外，你必须配置Mule ESB的本地库路径。

要在Studio中运行支持SAP的应用程序，您必须完成以下两项任务：

* 创建目录`src/main/app/lib`
* 将所有三个库复制到此目录

. 在位于Mule应用程序窗口左侧的*Package Explorer*窗格中，单击Mule项目名称左侧的加号 image:add.png[（加）]图标以展开资源树。

. 点击`src`左侧的加号图标。
. 点击`main`左侧的加号图标。
. 点击`app`左侧的加号图标。
. 右键单击`app`，选择*New*> *Folder*。
. 在标有*Folder name*的文本框中，键入`lib`，然后单击*Finish*。
. 将三个库`sapjco3.jar`，`sapidoc3.jar`和正确的本地库（如果使用CloudHub，使用64位Linux）复制到`src/main/app`目录。

image:copylibs.png[copylibs]

== 在Studio中运行支持SAP的应用程序

要在Studio中运行应用程序，您必须先将三个库添加到项目类路径中。要这样做，请按照下列步骤操作：

. 在*Package Explorer*窗格中，右键单击项目的目录，然后选择*Properties*。 （或者，按`Alt-Enter`打开*Properties*屏幕。
. 在*Properties*屏幕中，选择左侧窗格中的*Java Build Path*，然后点击*Libraries*标签。
+
image:props.for.sap.bapi-example.png[props.for.sap.bapi-示例]

. 点击*Add JARs*。

* 在*JAR Selection*窗格中，导航到`src/main/app/lib`，这是您之前复制SAP JCo库的目录。
* 选择扩展名为.jar的两个文件（即`libsapjco`和`sapjco3`），然后单击*OK*。
+
image:HTML-SAPEndpoint-SimpleStudioEditor_html_m3d9bc917.png[HTML-SAPEndpoint-SimpleStudioEditor_html_m3d9bc917]

[start=1]
. 确认您刚添加的两个.jar文件现在出现在*Properties*屏幕的*Libraries*选项卡上。
. 点击`sapjco3.jar`旁边的箭头展开，然后双击**Native library location: (none)**。
. 在*Native Library Folder Configuration*对话框中，完成以下子步骤：
.. 点击右侧的*Workspace...*按钮
.. 导航到项目的`lib`文件夹
.. 点击*OK*。 （或者，键入`lib`文件夹的位置，例如`<Project name>/src/main/app/lib`）。
+
image:HTML-SAPEndpoint-SimpleStudioEditor_html_11e4a294.png[HTML-SAPEndpoint-SimpleStudioEditor_html_11e4a294]

. 确认您的*Java Build Path*配置类似于以下屏幕截图，然后点击*OK*。
+
image:java.build.path-with.libs.png[java.build.path-with.libs]

== 将SAP传输添加到类路径

在系统`classpath`中指定SAP传输的位置使您能够在本地运行/调试项目，并在使用传输类的项目中创建自定义Java代码。

将任何SAP构建块放到画布上时，SAP传输依赖关系会自动添加。

要手动将SAP传输添加到类路径，请完成以下步骤：

. 在Package Explorer窗格中右键单击项目顶部。
. 选择*Build Path*  - > *Add Libraries ...*
. 选择图书馆类型*Mule Cloud Connectors Dependencies*，然后点击*Next*。
. 在*Extensions Classpath*列表中，检查SAP扩展。

image:add-lib.png[添加-LIB]

== 配置

您可以使用下面列出的任何配置中的SAP端点。

[%header%autowidth.spread]
|======
| {配置{1}}活动
| IDoc入站端点 | SAP传输器使用特定的程序ID向SAP服务器网关进行注册。这使它能够接收发送到该目的地的iDoc。
|功能入站端点 | SAP传输器使用特定的程序ID向SAP服务器网关进行注册，该程序ID允许使用从SAP中的ABAP代码绘制的RFC协议将SAP传输调用为函数或BAPI 。
| IDoc出站端点 | SAP传输器将在Mule ESB中生成的iDoc发送到SAP服务器。
|函数出站端点 | SAP传输调用驻留在SAP服务器上的函数或BAPI。
|======

SAP运输使用JCo作为基础的SAP集成技术。入站端点（IDoc和函数）启动JCo服务器，而出站端点依赖JCo客户端。

该连接器允许同步和异步通信。根据定义，函数是同步的，IDoc是异步的。

*  IDoc可以通过tRFC和qRFC发送和接收
* 函数（入站和出站）允许sRFC，tRFC和qRFC

[TIP]
====
如果将SAP Endpoint配置为函数，则根据上下文，*Function Name*属性的值会引用不同的对象：

* 对于入站端点，*Function Name*是此服务器处理的函数的名称。如果未提供任何值，则将处理所有功能。
* 对于出站端点，*Function Name*是SAP对象的名称。如果执行一个函数，这将是BAPI的名称。如果BAPI名称由有效负载或嵌套元素提供，则此值不是必需的。
====

从版本2.1.0开始，SAP出站端点也可用于生成代表BAPI或IDoc的有效XML模板。为实现此目的，应将类型配置为*function-metadata*或*idoc-metadata*，并且*Function Name*保存BAPI或IDoc的名称。

==  SAP变形金刚

SAP端点接收和传输SAP对象，这些对象必须在您的Mule流中转换为XML或从XML转换而来。 MuleSoft捆绑了专为处理这种转换而设计的三款SAP转换器：

*  SAP Object to XML
*  XML到SAP函数（BAPI）
*  XML到SAP IDoc

这些可在Studio Palette的*Transformers*组中找到。在调色板上方的过滤器输入框中输入*SAP*，将显示SAP端点和SAP变形金刚（下图）：

image:SAP_transformers_in_palette.png[SAP_transformers_in_palette]

单击并拖动SAP入站端点之后的*SAP Object to XML*变换器（如果端点是函数并且期望响应，则为SAP出站端点）。

在您的Mule应用程序流程中，单击并拖动您的SAP出站端点上的*XML to SAP Function (BAPI)*或*XML to SAP IDoc*变换器。

==  SAP入站端点要求

如果您正在配置SAP入站端点（JCo服务器），则必须修改您的操作系统`services`文件，该文件为：

*  `/etc/services`为基于Unix的操作系统
Windows *  `C:\WINDOWS\system32\drivers\etc\services`

在上述文件中，您必须添加网关（通过`jcoGwService`属性或`jco.server.gwserv /jco.client.gwserv`属性进行配置）。只需添加网关;您不需要添加整个服务映射列表。

例如，要设置以下`jcoGwService=sapgw00`，请添加以下字符串：

[source, code, linenums]
----
bq. sapgw00 3300/tcp
----

端口3300由SAP预定义。

== 连接器全局元素

SAP连接器对象包含允许您连接到SAP服务器的配置属性。当SAP连接器被定义为*Global Element*时，所有SAP端点都使用其连接参数;否则每个SAP端点都使用自己的连接参数连接到SAP服务器。

要创建SAP连接器，请完成以下步骤：

. 点击*Message Flow*画布下方的*Global Elements*标签。
. 点击*Create*，然后点击连接器左侧的加号图标 image:add.png[（加）]。

. 从可用连接器的下拉列表中选择*SAP*，然后点击*OK*。
. 在*Global Elements Properties*窗格中，输入用于定义SAP系统管理员应提供的SAP连接所需的参数。

=== 连接属性

存在许多SAP连接属性。为了便于使用，SAP连接器仅将最常见的属性显示为连接器参数。要配置未在“属性”窗格中列出的属性，请参阅<<Extended Properties>>。

image:sap-connector.png[树液连接器]

至少为以下属性提供值：

* 在*Name*字段中，为项目中的SAP端点使用的连接器输入适当的名称。
* 在*AS Host*字段中输入SAP系统的名称（URL或IP地址）。
* 在*User*和*Password*字段中，输入授权连接到SAP系统的用户的用户名和密码。
* 在*SAP System Number*字段中，输入用于连接到SAP系统的系统编号。
* 在*SAP Client*字段中，输入用于连接SAP系统的SAP客户端ID（通常是一个数字）。
* 在*Login Language*字段中，输入将在SAP连接中使用的语言，例如英语为*EN*。

=== 扩展属性

为了提供额外的配置属性，您可以定义一个表示Map（`java.util.Map`）实例的Spring bean全局元素。这可用于配置SCN（安全连接）或高级池功能等其​​他属性。

在这种情况下，您必须知道SAP_定义的配置属性_as。

要为*SAP global connector*定义扩展属性，请完成以下步骤：

. 转到*Global Elements Properties*面板上的*Advanced*标签。
. 找到窗口底部的*Extended Properties*部分。
. 点击*Extended Properties*下拉菜单旁边的加号图标来定义其他配置属性。

image:sap-connector-adv.png[树液连接器-ADV]

== 优先化连接属性

SAP连接的入站和出站属性都可以在许多地方进行配置，这可能会导致连接参数重叠。以下列表详细列出了在不同地方指定的值所赋予的优先级，其中列出的优先级最高。

在*SAP Inbound Endpoint*和*SAP Outbound Endpoint*级别定义的. 属性，例如*User*，*Password*，*Gateway Host*等等。
.  *SAP Inbound Endpoint*和*SAP Outbound Endpoint*级别的*Address*属性。 （但是，MuleSoft不建议使用SAP连接的*Address*属性。）
. 在*SAP Inbound Endpoint*和*SAP Outbound Endpoint*级别的JCo客户端或服务器的*Extended Properties*窗格中配置的地图内的属性。
以*SAP Connector*级别（即*AS Host*，*User Password*，*SAP Client*等）配置的. 属性。
. 在*SAP Connector*级别的*Extended Properties*窗格中配置的地图中的属性。
. 默认值。

==  XML定义

下面提供的定义是函数（JCOFunction）或IDoc（IDocDocument / IDocDocumentList）的XML表示形式。这些是您与SAP交换的XML文档。

SAP传输包<<SAP Transformers>>将端点与SAP之间交换的XML文档转换为终端可处理的相应SAP对象。

*View JCo Function code sample*

[source, xml, linenums]
----
<jco name="BAPI_PO_CREATE1" version="1.0">
  <import>
    <structure name="POHEADER">
      <field name="COMP_CODE">2100</field>
      <field name="DOC_TYPE">NB</field>
      <field name="VENDOR">0000002101</field>
      <field name="PURCH_ORG">2100</field>
      <field name="PUR_GROUP">002</field>
    </structure>
    <structure name="POHEADERX">
      <field name="DOC_TYPE">X</field>
      <field name="VENDOR">X</field>
      <field name="PURCH_ORG">X</field>
      <field name="PUR_GROUP">X</field>
      <field name="COMP_CODE">X</field>
    </structure>
  </import>
  <tables>
    <table name="POITEM">
      <row id="0">
        <field name="NET_PRICE">20</field>
        <field name="PLANT">2100</field>
        <field name="MATERIAL">SBSTO01</field>
        <field name="PO_ITEM">00010</field>
        <field name="QUANTITY">10.000</field>
      </row>
    </table>
    <table name="POITEMX">
      <row id="0">
        <field name="PO_ITEMX">X</field>
        <field name="MATERIAL">X</field>
        <field name="QUANTITY">X</field>
        <field name="PLANT">X</field>
        <field name="PO_ITEM">00010</field>
        <field name="NET_PRICE">X</field>
      </row>
    </table>
    <table name="POSCHEDULE">
      <row id="0">
        <field name="QUANTITY">10.000</field>
        <field name="DELIVERY_DATE">27.06.2011</field>
        <field name="SCHED_LINE">0001</field>
        <field name="PO_ITEM">00010</field>
      </row>
    </table>
    <table name="POSCHEDULEX">
      <row id="0">
        <field name="PO_ITEM">00010</field>
        <field name="QUANTITY">X</field>
        <field name="DELIVERY_DATE">X</field>
        <field name="SCHED_LINEX">X</field>
        <field name="PO_ITEMX">X</field>
        <field name="SCHED_LINE">0001</field>
      </row>
    </table>
  </tables>
</jco>
----

*View a JCo Function Response code sample*

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<jco name="Z_MULE_EXAMPLE">
  <import>
    ...
  </import>
  <export>
    <structure name="RETURN">
      <field name="TYPE"></field>
      <field name="ID"></field>
      <field name="NUMBER"></field>
      <field name="MESSAGE"></field>
      <field name="LOG_NO"></field>
      <field name="LOG_MSG_NO"></field>
      <field name="MESSAGE_V1"></field>
      <field name="MESSAGE_V2"></field>
      <field name="MESSAGE_V3"></field>
      <field name="MESSAGE_V4""></field>
      <field name="PARAMETER"></field>
      <field name="ROW"></field>
      <field name="FIELD"></field>
      <field name="SYSTEM"></field>
    </structure>
  </export>
  <exceptions>
    <exception>MULE_EXCEPTION_01</exception>
    <exception>MULE_EXCEPTION_02</exception>
    <exception>MULE_EXCEPTION_03</exception>
  </exceptions>
</jco>
----

====  JCo函数返回类型

`<field name="TYPE"></field>`行包含返回类型的值，可以是以下任何值：

*  *A*：中止
*  *S*：成功
*  *E*：错误
*  *W*：警告
*  *I*：信息

[NOTE]
====
当`evaluateFunctionResponse`设置为*true*时，SAP出站端点会在以下任一情况下引发异常：

* 返回类型为*A*或*E*时
* 存在例外时
====

===  IDoc文档/文档列表

IDoc是由SAP定义的XML文档。您可以使用SAP用户界面从SAP服务器下载他们的定义。

*View an IDoc code sample*

[source, xml, linenums]
----
<?xml version="1.0"?>
<ORDERS05>
    <IDOC BEGIN="1">
        <EDI_DC40 SEGMENT="1">
            <TABNAM>EDI_DC40</TABNAM>
            <MANDT>100</MANDT>
            <DOCNUM>0000000000237015</DOCNUM>
            <DOCREL>700</DOCREL>
            <STATUS>30</STATUS>
            <DIRECT>1</DIRECT>
            <OUTMOD>2</OUTMOD>
            <IDOCTYP>ORDERS05</IDOCTYP>
            <MESTYP>ORDERS</MESTYP>
            <STDMES>ORDERS</STDMES>
            <SNDPOR>SAPB60</SNDPOR>
            <SNDPRT>LS</SNDPRT>
            <SNDPRN>B60CLNT100</SNDPRN>
            <RCVPOR>MULE_REV</RCVPOR>
            <RCVPRT>LS</RCVPRT>
            <RCVPRN>MULESYS</RCVPRN>
            <CREDAT>20110714</CREDAT>
            <CRETIM>001936</CRETIM>
            <SERIAL>20101221112747</SERIAL>
        </EDI_DC40>
        <E1EDK01 SEGMENT="1">
            <ACTION>004</ACTION>
            <CURCY>USD</CURCY>
            <WKURS>1.06383</WKURS>
            <ZTERM>0001</ZTERM>
            <BELNR>0000000531</BELNR>
            <VSART>01</VSART>
            <VSART_BEZ>standard</VSART_BEZ>
            <RECIPNT_NO>C02199</RECIPNT_NO>
            <KZAZU>X</KZAZU>
            <WKURS_M>0.94000</WKURS_M>
        </E1EDK01>
         
        ...
         
        <E1EDS01 SEGMENT="1">
            <SUMID>002</SUMID>
            <SUMME>1470.485</SUMME>
            <SUNIT>USD</SUNIT>
        </E1EDS01>
    </IDOC>
</ORDERS05>
----

== 入站端点

入站端点通过RFC接收IDoc和函数。要实施*SAP Inbound Endpoint*，请完成以下步骤：

. 将*SAP Endpoint*从调色板上的端点组拖放到您的流程开始处。
. 双击SAP图标打开*Endpoint Properties*窗格，然后定义您的端点属性。
. 在*Type*下拉菜单中，选择是否接收IDoc或函数调用。
+
image:sap-endpoint-type.png[SAP-端点类型]

[NOTE]
选择端点类型后，*Endpoint Properties*编辑器将根据选定的端点类型自动启用或禁用参数输入框。例如，选择*IDoc*作为端点类型后，与*Function Name*输入框或*Evaluate Function Response*复选框等功能相关的参数将被禁用。

[WARNING]
由于JCo服务器需要向SAP实例注册，因此您必须指定_ *client*和*server*配置属性。

=== 入站端点属性

下表列出了*Inbound Endpoint*属性。

[%header%autowidth.spread]
|===
|属性名称 | Mule属性名称 |端点属性选项卡 |描述 |默认值
|显示名称 |名称 |常规 | Mule配置内部使用的端点的引用名称。 |
|所有Exchange模式 |交换模式 |常规 |可用选项为请求响应和单向。 |
|地址 |地址 |高级 |提供端点属性的标准方式。有关更多信息，请检查：端点地址。 |
|类型 |类型 |常规 |此端点将处理的SAP对象的类型（即*function*或*idoc*）{{6 }}功能
| RFC类型 | rfcType  |常规 |端点用于接收函数或IDoc的RFC类型。可用选项包括*srfc*（*sync* *no TID handler*），*trfc*和*qrfc*（均为*async*}，{ {6}}）。 | SRFC
|函数名称 |函数名称 |常规 |如果类型为*function*，那么这是将要处理的BAPI函数的名称。如果未提供任何值，则会将通用处理程序配置为接收所有呼叫。 |
| SAP客户端 | jcoClient  |高级 | SAP客户端。这通常是一个整数，例如100。 |
|用户 | jcoUser  |高级 |基于密码的身份验证的登录用户。 |
|密码 | jcoPasswd  |高级 |与登录用户关联的登录密码，用于基于密码的身份验证。 |
|登录语言 | jcoLang  |高级 |登录语言。如果未定义，则使用默认的用户语言。 | en
| AS主机 | jcoAsHost  |高级 | SAP应用程序服务器主机。使用IP地址或服务器名称。 |
| SAP系统编号 | jcoSysnr  |高级 | SAP系统编号。 |
|池容量 | jcoPoolCapacity  |高级 |目的地保持打开的最大空闲连接数。当值为0时，不会发生连接池。 | 5
|峰值限制 | jcoPeakLimit  |可为目标创建的最大同时活动连接数。 | 10  |
|网关主机 | jcoGwHost  |常规 |应在其上注册服务器的网关主机。 |
|网关服务 | jcoGwService  |常规 |网关服务，即执行注册的端口。 |
|程序ID  | jcoProgramId  |常规 |执行注册的程序ID。 |
|连接计数 | jcoConnectionCount  |常规 |应该在网关注册的连接数。 | 2
|扩展属性 | jcoClientExtendedProperties-ref  |高级 |对`java.util.Map`的引用，其中包含其他JCo连接参数。 |
|===

===  IDoc端点属性

要配置IDoc服务器，请完成以下步骤。

. 从SAP端点*Properties*窗格的*General*选项卡开始，将*Type*属性设置为*IDoc*。
. 将*RFC Type*参数定义为*Transactional RFC (tRFC)*或**Queued RFC (qRFC)**。 IDoc根据定义是异步的，所以它们不能通过**Synchronous RFC (sRFC)**接收。
.  <<Configuring the TID Handler>>。缺省值是内存中的TID处理程序。
. 指定以下必需属性：
* 网关主机
* 网关服务
* 程序ID
. 单击*Advanced*选项卡，然后根据需要为端点或连接器指定必需的连接属性。这可能包括*SAP Client*，*User*，*Password*，*AS Host*和*SAP System Number*。

=== 功能端点属性

要将端点配置为RFC服务器，请完成以下步骤。

. 将*type*参数设置为`function`。
. 将*rfcType*参数定义为`trfc`，`qrfc`或`srfc`。如果未指定*rfcType*，则默认使用`srfc`。
. 当*rfcType*为`trfc`或`qrfc`时，您可能还需要<<Configuring the TID Handler>>。
. 指定以下必需属性：*jcoGwHost*，*jcoGwService*，*jcoProgramId*。
. 根据需要为端点或连接器指定必需的连接属性。这可能包括*jcoClient*，*jcoUser*，*jcoPasswd*，*jcoAsHost*，*jcoSysnr*。
. 在*General*选项卡中，将*Type*属性设置为`Function (BAPI)`。
. 将*RFC Type*参数定义为`Transactional RFC (tRFC)`，`Queued RFC (qRFC)`或`Synchronous RFC (sRFC)`。
. 如果*RFC Type*是`Transactional RFC (tRFC)`或`Queued RFC (qRFC)`，则<<Configuring the TID Handler>>。
. 指定以下必需属性：
*  *Gateway Host*
*  *Gateway Service*
*  *Program ID*
. 在*Advanced*选项卡中，根据需要为端点或连接器指定必需的连接属性。这可能包括*SAP Client*，*User*，*Password*，*AS Host*和*SAP System Number*。

=== 配置TID处理程序

TID处理程序（Transaction ID）是*tRFC*和*qRFC*的重要组件，可确保Mule ESB不会处理同一个事务两次。

要定义TID处理程序，请完成以下步骤。

. 在*Endpoint Properties*窗口的*General*选项卡中，找到靠近窗口底部的*TID Store*部分。
. 从*Type*下拉菜单中为TID处理程序选择以下三个选项之一：
*  *None*：没有TID处理程序。
*  *Default In Memory TID Store*：便于在同一Mule ESB实例中共享TID。如果端点*Type*是`tRFC`或`qRFC`，并且没有配置TID存储，则使用此默认存储。
*  *Object Store TID Store*：这个包装使用现有的Mule ESB对象存储来存储和共享TID。如果您需要多个Mule ESB服务器实例，则应该配置一个JDBC对象存储，以便您可以在这些实例之间共享TID。

[NOTE]
当端点*Type*设置为**Synchronous RFC (sRFC)**或未提供（因此默认为*Synchronous RFC*）时，则不配置任何TID处理程序。此外，如果在XML文件中配置了TID处理程序，它将被忽略。

要配置**In-memory TID Store**，您必须遵守以下规定：

如果您有多个共享相同*program id*的Mule ESB实例，* 内存中TID存储将无法按预期工作。 （这是因为SAP网关在共享相同*program id*的所有注册SAP服务器之间进行负载平衡）
* 端点*Type*应该是*trfc*或*qrfc*
配置子元素`<sap:default-in-memory-tid-store/>`的{​​{0}}是可选的，因为内存中处理程序是默认选项

=== 参考

如果您已经创建了全局连接器（请参阅<<Connector Global Element>>），请在此处选择它。如果没有，你可以在这里创建你的SAP连接器。

=== 高级

[IMPORTANT]
====
SAP连接器支持地址属性，以便与其他Mule ESB端点兼容。

MuleSoft建议您不要为SAP连接器配置此属性。
====

您可以通过包含对*Extended Properties*地图的新引用来覆盖所有*Connector*属性。

=== 服务器扩展属性

配置入站端点时，您还可以提供特定的服务器配置高级属性。

== 出站端点

*Outbound Endpoint*执行函数（BAPI），或者通过RFC发送IDoc。出站端点的属性与入站端点的属性相似，您可以通过*Endpoint Properties*窗格配置它们。

在出站端点，可以通过以下两种方式之一构建IDoc或功能：

* 定义为端点的有效载荷
* 从XML文件中获得

要手动定义IDoc或功能，请完成以下步骤。

. 转到*Endpoint Properties*窗格中的*XML Definition*标签。
. 键入或复制IDoc或Function并将其粘贴到*Function / IDoc XML*复选框下方的输入框中。

要从XML文件获取IDoc或功能，请单击*Definition File*，然后执行以下操作之一：

* 键入文件的完整路径
* 点击*...*（即省略号按钮）导航到文件

image:sap-outbound-endpoint-xml.png[SAP-出站端点XML]

如果您既没有定义有效负载，也没有指定定义文件，Mule通过对端点接收的数据应用默认模板来构建有效负载。

=== 出站端点属性

下表列出了*Outbound Endpoint*属性：

[%header%autowidth.spread]
|===
|属性名称 | Mule属性名称 |端点属性选项卡 |描述 |默认值
|显示名称 |名称 |常规 | Mule配置内部使用的端点的引用名称。 |
|所有Exchange模式 |交换模式 |常规 |可用选项为请求响应和单向。 |
|地址 |地址 |高级 |提供端点属性的标准方式。有关更多信息，请检查：端点地址。 |
|类型 |类型 |常规 |此端点将处理的SAP对象的类型（即*function*或*idoc*）从2.1 。*function-metadata*和*idoc-metadata*可用于为给定的BAPI或IDoc检索XML结构。 |函数
| RFC类型 | rfcType  |常规 |端点用于接收函数或IDoc的RFC类型。可用选项包括*srfc*（*sync* *no TID handler*），*trfc*和*qrfc*（均为*async*}，{ {6}}）。 | SRFC
|队列名称 |队列名称 |常规 |如果RFC类型为*qrfc*，那么这将是队列的名称。 |
|函数名称 |函数名称 |常规 |如果类型为*function*，那么这是将执行的BAPI函数的名称。当选择元数据类型时，此属性保存应检索元数据的BAPI或IDoc的名称。 |
| XML版本 | xmlVersion  |常规 |当type是其中一种元数据类型时，则是要生成的XML版本（函数有两种可能的XML版本）  | 版本1
|评估函数响应（复选框） | evaluateFunctionResponse  |常规 |当类型为*function*时，*true*标志（即， ）表示SAP传输应评估函数响应并在SAP中发生错误时引发异常。当此标志被设置为*false*（框未选中）时，SAP传输不会在发生错误时引发异常，并且用户负责解析函数响应。 | false
|是BAPI交易（复选框） | bapiTransaction  |常规 |选中*BAPI_TRANSACTION_COMMIT*或*BAPI_TRANSACTION_ROLLBACK*后，交易，具体取决于该交易的结果。 |  false
|定义文件 | definitionFile  | XML定义 |要执行的函数或要发送的IDoc的模板定义文件的路径。{{4} }
| IDoc版本 | idocVersion  |高级 |类型为*idoc*时，在发送IDoc时使用此版本。 IDoc版本的值对应于com.sap.conn.idoc.IDocFactory  | 0（IDOC_VERSION_DEFAULT）中的*IDOC_VERSION_xxxx*个常量。
| SAP客户端 | jcoClient  |高级 | SAP客户端。这通常是一个整数，例如100  |
|用户 | jcoUser  |高级 |基于密码的身份验证的登录用户 |
|密码 | jcoPasswd  |高级 |与登录用户关联的登录密码，用于基于密码的身份验证。 |
|登录语言 | jcoLang  |高级 |登录语言。如果未定义，则使用默认的用户语言。 | en
| AS主机 | jcoAsHost  |高级 | SAP应用程序服务器主机。使用IP地址或服务器名称。 |
| SAP系统编号 | jcoSysnr  |高级 | SAP系统编号。 |
|池容量 | jcoPoolCapacity  |高级 |目的地保持打开的最大空闲连接数。当值为0时，不会发生连接池。 | 5
|峰值限制 | jcoPeakLimit  |可为目标创建的最大同时活动连接数。 | 10  |
|扩展属性 | jcoClientExtendedProperties-ref  |高级 |对`java.util.Map`的引用，其中包含其他JCo连接参数。|
|===

=== 交易

尽管SAP出站端点支持*Transactions*，但由于JCo库不支持XA，因此不支持分布式事务。

要定义交易属性，请导航至*Endpoint Properties*窗格的*General*选项卡，然后在窗口底部附近找到*Transaction*部分。

image:sap-transaction.png[SAP事务]

下表列出了事务属性：

[%header%autowidth.spread]
|===
|属性名称 | Mule属性 |描述 |默认值 |值
| ACTION  | action  | action属性是Mule ESB事务标准的一部分，可以具有以下值：NONE，ALWAYS_BEGIN，BEGIN_OR_JOIN，ALWAYS_JOIN和JOIN_IF_POSSIBLE  |
|===

从版本2.1.0开始，BAPI事务属性可以在“常规选项”选项卡的“客户端设置”窗格中找到。

